--- a/NitroIdentity/src/NitroClient/Properties/launchSettings.json
+++ b/NitroIdentity/src/NitroClient/Properties/launchSettings.json
@@ -6,6 +6,7 @@
             "dotnetRunMessages": true,
             "launchBrowser": true,
             "applicationUrl": "https://localhost:5002",
+            "launchUrl": "index",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
