base authentication in NitroIdentityJwt Done

--- a/NitroIdentity/src/NitroIdentityJwt/appsettings.json
+++ b/NitroIdentity/src/NitroIdentityJwt/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Initial Catalog=IdentityJwt;User Id=sa;Password=Nitro912*;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
+    "JwtSettings": {
+        "Secret": "ThisIsMySecretKey1234567890123456789009876543210987654321",
+        "Issuer": "YourIssuer",
+        "Audience": "YourAudience",
+        "ExpireMinutes": 60
+    },
+    "AllowedHosts": "*"
 }
