--- a/NitroIdentity/src/NitroIdentityServer/appsettings.json
+++ b/NitroIdentity/src/NitroIdentityServer/appsettings.json
@@ -1,17 +1,22 @@
 ﻿{
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft.AspNetCore.Authentication": "Debug",
-        "System": "Warning"
-      }
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information",
+                "Microsoft.AspNetCore.Authentication": "Debug",
+                "System": "Warning"
+            }
+        }
+    },
+    "JwtSettings": {
+        "Secret": "ThisIsMySecretKey1234567890123456789009876543210987654321",
+        "Issuer": "YourIssuer",
+        "Audience": "YourAudience",
+        "ExpireMinutes": 60
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=AspIdUsers.db;"
     }
-  },
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
-  }
 }
