--- a/NitroIdentity/src/NitroIdentityServer/NitroIdentityServer.csproj
+++ b/NitroIdentity/src/NitroIdentityServer/NitroIdentityServer.csproj
@@ -7,9 +7,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Duende.IdentityServer" Version="7.0.5" />
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="7.0.4" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.3" />
+
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+
+		<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.7" />
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.3" />
