--- a/NitroIdentity/src/NitroIdentityJwt/appsettings.json
+++ b/NitroIdentity/src/NitroIdentityJwt/appsettings.json
@@ -9,9 +9,10 @@
         "DefaultConnection": "Server=.;Initial Catalog=IdentityJwt;User Id=sa;Password=Nitro912*;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
     "JwtSettings": {
-        "Secret": "ThisIsMySecretKey1234567890123456789009876543210987654321",
-        "Issuer": "YourIssuer",
-        "Audience": "YourAudience",
+        //"Secret": "ThisIsMySecretKey1234567890123456789009876543210987654321",
+        "Secret": "YourSuperSecretKeyHere12345678901234567890",
+        "Issuer": "NitroIdentityJwt",
+        "Audience": "ApiTwo",
         "ExpireMinutes": 60
     },
     "AllowedHosts": "*"
